--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Node.js
-node_modules/
+node_modules
+.env/
 npm-debug.log
 yarn-debug.log
 yarn-error.log
@@ -19,3 +20,4 @@ logs/
 .vscode/
 .idea/
 *.swp
+.vercel
